--- a/templates/base.html
+++ b/templates/base.html
@@ -113,7 +113,7 @@
 <!--			</footer>-->
 			<!-- End footer Area -->
 
-			<script src="{% static 'home-static/js/vendor/jquery-2.2.4.min.js'%}"></script>-->
+			<script src="{% static 'home-static/js/vendor/jquery-2.2.4.min.js'%}"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 			<script src="{% static 'home-static/js/vendor/js/vendor/bootstrap.min.js'%}"></script>
 			<script src="{% static 'home-static/js/jquery.ajaxchimp.min.js'%}"></script>
