--- a/static/home-static/css/mystyle.css
+++ b/static/home-static/css/mystyle.css
@@ -24,3 +24,30 @@ margin-left:1000px;
 .allstacks{
 margin-left:50px;
 }
+
+
+.button {
+  width:200px;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+    background-color: white;
+  color: black;
+  border: 2px solid #008CBA;
+
+
+
+
+}
+
+
+
+
+
